--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
   <style type="text/css">
   </style>
 </head>
-<body style="background:#104B6B;">
+<body>
   <div class="container">
     <h1>CardTips</h1>
     <p class="desc">A jQuery plugin to create simple card-style tooltips.</p>
 
+    <h2>Default Cardtip appearance</h2>
+    <div class="cardtips-wrapper south east" style="position:relative;">
+      <div class="cardtips-content" style="display:inline-block;">
+        <p>Some HTML can go here.<br>Not much to do right now.</p>
+      </div>
+    </div>
+
     <h2>Quick Demo</h2>
     <p>Lorem ipsum dolor sit amet, <span data-cardtips="A quick tooltip text for testing with!">consectetur adipiscing elit</span>. Integer mollis enim et faucibus rhoncus. Aenean tincidunt porttitor dui, at condimentum nulla finibus ut. Aliquam elementum nisl leo, quis imperdiet mauris egestas sed. Phasellus ut odio vitae nisi porttitor tempus. Curabitur non ligula id ligula facilisis rutrum nec et nibh. Nulla vestibulum pulvinar augue vitae posuere. Fusce lobortis libero mollis convallis consectetur. Pellentesque mollis venenatis justo ultricies ornare. Nunc malesuada, libero quis elementum condimentum, metus purus malesuada leo, non faucibus arcu metus et erat. Sed ullamcorper eget tortor eu convallis. Ut vitae iaculis arcu. Nunc aliquam, dui sed varius posuere, purus sapien varius tortor, vel vehicula diam eros sit amet neque. Sed quis hendrerit quam. Quisque at euismod lacus.</p>
-  </div>
-  <div class="cardtips-wrapper north east">
-    <div class="cardtips-content">
-      <p>Some HTML can go here.<br>Not much to do right now.</p>
-    </div>
   </div>
 
 <script src="js/jquery-2.2.2.min.js"></script>
